Fixed a bug with extra spaces after commas that follow a link

--- a/campaign/locations/regions/Matella/Alderpine/Alderpine.html
+++ b/campaign/locations/regions/Matella/Alderpine/Alderpine.html
@@ -59,9 +59,7 @@
    <p class="first-paragraph">
     Alderpine, a province within
     <a href="../Matella.html">
-     Matella
-    </a>
-    , is a captivating and enchanting region renowned for its dense forests and abundant vegetation. This heavily wooded area teems with natural beauty and harbors an air of mystery, as it is primarily inhabited by reclusive elves and other elusive creatures who prefer to keep to themselves. Here is a brief summary of Alderpine:
+     Matella</a>, is a captivating and enchanting region renowned for its dense forests and abundant vegetation. This heavily wooded area teems with natural beauty and harbors an air of mystery, as it is primarily inhabited by reclusive elves and other elusive creatures who prefer to keep to themselves. Here is a brief summary of Alderpine:
    </p>
    <h4>
     Lush Forests
@@ -124,9 +122,7 @@
    <p class="first-paragraph">
     The demographics of Alderpine, an enchanting province nestled within
     <a href="../Matella.html">
-     Matella
-    </a>
-    , are unique and shaped by its lush forests and reclusive inhabitants. While precise figures regarding the population of Alderpine remain unknown, this section provides insights into the primary demographics of the region.
+     Matella</a>, are unique and shaped by its lush forests and reclusive inhabitants. While precise figures regarding the population of Alderpine remain unknown, this section provides insights into the primary demographics of the region.
    </p>
    <h4>
     Elves
