--- a/campaign/locations/regions/Matella/Daystone_Isle/Daystone_Isle.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/Daystone_Isle.html
@@ -59,9 +59,7 @@
    <p class="first-paragraph">
     Nestled along the southwestern shores of
     <a href="../The_Ashenlands/The_Ashenlands.html">
-     The Ashenlands
-    </a>
-    , Daystone Isle exudes a distinct aura of elegance and privilege as the domain of the Daystone royal family. The island, bordered by the vast sea to the south and flanked by
+     The Ashenlands</a>, Daystone Isle exudes a distinct aura of elegance and privilege as the domain of the Daystone royal family. The island, bordered by the vast sea to the south and flanked by
     <a href="../The_Ashenlands/The_Ashenlands.html">
      The Ashenlands
     </a>
