--- a/campaign/locations/regions/Matella/Elda_Reem_Passlands/Elda_Reem_Passlands.html
+++ b/campaign/locations/regions/Matella/Elda_Reem_Passlands/Elda_Reem_Passlands.html
@@ -59,9 +59,7 @@
    <p>
     The Elda Reem Passlands, situated just northwest of the
     <a href="../Mentassa_Plains/Mentassa_Plains.html">
-     Mentassa_Plains
-    </a>
-    , encompass a diverse and rugged region renowned for its unique terrain. Dominating the southeastern portion of the Passlands is the Utengho Marshlands, a sprawling expanse of marshy landscapes teeming with vibrant flora and fauna. To the north and west, a majestic mountain range stands proudly, guarding the region and offering a wealth of precious crystals and gemstones within its depths. However, traversing these mountains can be perilous, as they are inhabited by fearsome dragons, unique creatures, and cunning bandits seeking to exploit unwary travelers. On the opposite side of the Passlands lies the Gharoni Highlands, with an elevated plateau and meadows characterized by its own distinct features and challenges. Nestled to the northeastern reaches of the Passlands, the rugged mountainous region of Loch Modar serves as a revered home to a resilient community of dwarves. As adventurers venture into the Elda Reem Passlands, they will encounter an array of breathtaking landscapes, formidable obstacles, and untold possibilities, where every step brings both danger and the promise of remarkable treasures.
+     Mentassa_Plains</a>, encompass a diverse and rugged region renowned for its unique terrain. Dominating the southeastern portion of the Passlands is the Utengho Marshlands, a sprawling expanse of marshy landscapes teeming with vibrant flora and fauna. To the north and west, a majestic mountain range stands proudly, guarding the region and offering a wealth of precious crystals and gemstones within its depths. However, traversing these mountains can be perilous, as they are inhabited by fearsome dragons, unique creatures, and cunning bandits seeking to exploit unwary travelers. On the opposite side of the Passlands lies the Gharoni Highlands, with an elevated plateau and meadows characterized by its own distinct features and challenges. Nestled to the northeastern reaches of the Passlands, the rugged mountainous region of Loch Modar serves as a revered home to a resilient community of dwarves. As adventurers venture into the Elda Reem Passlands, they will encounter an array of breathtaking landscapes, formidable obstacles, and untold possibilities, where every step brings both danger and the promise of remarkable treasures.
    </p>
   </div>
   <hr/>
@@ -91,9 +89,7 @@
    <p class="first-paragraph">
     The Elda Reem Passlands, located just northwest of the
     <a href="../Mentassa_Plains/Mentassa_Plains.html">
-     Mentassa_Plains
-    </a>
-    , is a vast region characterized by its rugged and challenging terrain. The demographics of the Passlands are unique, with settlements and inhabitants primarily concentrated along the outskirts of the province, while the heart of the Passlands remains sparsely populated.
+     Mentassa_Plains</a>, is a vast region characterized by its rugged and challenging terrain. The demographics of the Passlands are unique, with settlements and inhabitants primarily concentrated along the outskirts of the province, while the heart of the Passlands remains sparsely populated.
    </p>
    <p>
     The settlements that dot the fringes of the Elda Reem Passlands are strategically positioned to take advantage of key resources, trade routes, and access to the main river that traverses the region. These settlements serve as gateways to the untamed wilderness of the Passlands, providing respite, supplies, and a sense of community for travelers and adventurers venturing into the vast expanse.
@@ -116,9 +112,7 @@
    <p class="first-paragraph">
     The culture of the Elda Reem Passlands, situated northwest of the
     <a href="../Mentassa_Plains/Mentassa_Plains.html">
-     Mentassa_Plains
-    </a>
-    , is as diverse and rugged as the land itself. Shaped by the challenging environment and the constant struggle for survival, the inhabitants of this region have developed a unique set of customs, traditions, and values.
+     Mentassa_Plains</a>, is as diverse and rugged as the land itself. Shaped by the challenging environment and the constant struggle for survival, the inhabitants of this region have developed a unique set of customs, traditions, and values.
    </p>
    <p>
     One prominent aspect of the Passlands' culture is a deep appreciation for self-reliance and adaptability. The people who call this untamed wilderness their home have learned to navigate the rough terrain, harsh climates, and unpredictable dangers that come with living in such a rugged landscape. Survival skills, resourcefulness, and a keen understanding of the land are highly prized and passed down through generations.
