--- a/campaign/locations/regions/Matella/Mentassa_Plains/Mentassa_Plains.html
+++ b/campaign/locations/regions/Matella/Mentassa_Plains/Mentassa_Plains.html
@@ -59,16 +59,12 @@
    <p class="first-paragraph">
     Nestled to the west of
     <a href="../The_Ashenlands/The_Ashenlands.html">
-     The Ashenlands
-    </a>
-    , the Mentassa Plains unveil a picturesque province characterized by vast expanses of rolling hills and fertile plains. This region, with its serene beauty and abundant natural resources, offers a unique landscape and a distinctive way of life.
+     The Ashenlands</a>, the Mentassa Plains unveil a picturesque province characterized by vast expanses of rolling hills and fertile plains. This region, with its serene beauty and abundant natural resources, offers a unique landscape and a distinctive way of life.
    </p>
    <p>
     Stretching as far as the eye can see, the Mentassa Plains encompass a sweeping expanse of undulating hills and sprawling plains. The land is predominantly marked by open grasslands, dotted with occasional clusters of trees and patches of wildflowers. To the north, the towering silhouette of a majestic mountain range commands attention, providing a breathtaking backdrop to the plains. To the west lies a sprawling swamp area and the
     <a href="../Elda_Reem_Passlands/Elda_Reem_Passlands.html">
-     Elda Reem Passlands
-    </a>
-    , an intriguing ecosystem teeming with diverse flora and fauna. Finally, to the south, the shimmering waters of a vast sea or bay area create a natural boundary, offering glimpses of maritime beauty.
+     Elda Reem Passlands</a>, an intriguing ecosystem teeming with diverse flora and fauna. Finally, to the south, the shimmering waters of a vast sea or bay area create a natural boundary, offering glimpses of maritime beauty.
    </p>
    <p>
     While the Mentassa Plains may not boast many large towns or cities, it thrives with a myriad of homesteads and farmland that speckle the countryside. The inhabitants of this province are primarily farmers, ranchers, and homesteaders who have carved out their own idyllic lifestyles in harmony with the fertile land. The plains support a variety of agricultural activities, including the cultivation of crops, animal husbandry, and the nurturing of orchards and vineyards. Homesteads are often self-sufficient, relying on the bountiful natural resources of the region to sustain their way of life.
