--- a/campaign/locations/regions/Matella/The_Ashenlands/The_Ashenlands.html
+++ b/campaign/locations/regions/Matella/The_Ashenlands/The_Ashenlands.html
@@ -59,9 +59,7 @@
    <p class="first-paragraph">
     Situated to the south of
     <a href="../Alderpine/Alderpine.html">
-     Alderpine
-    </a>
-    , The Ashenlands encompass a sprawling expanse of fertile terrain and diverse ecosystems, making it a land teeming with life and opportunities. This region is renowned for its dedication to free trade, capitalism, and the principles of local city and town governance.
+     Alderpine</a>, The Ashenlands encompass a sprawling expanse of fertile terrain and diverse ecosystems, making it a land teeming with life and opportunities. This region is renowned for its dedication to free trade, capitalism, and the principles of local city and town governance.
    </p>
    <p>
     The Ashenlands present an awe-inspiring tapestry of natural beauty. Vast stretches of lush farmland dominate the landscape, adorned with vibrant fields of crops swaying in the gentle breeze. Orchards abound, bearing fruits of various varieties, their sweet aromas permeating the air. Majestic forests, with towering trees of diverse species, cloak the land, providing a sanctuary for countless wildlife species. The harmonious coexistence of humans and nature is evident as homesteads and settlements seamlessly merge with the verdant surroundings.
