Added some html files and renamed some images

--- a/campaign/locations/regions/Matella/Alderpine/Alderpine.html
+++ b/campaign/locations/regions/Matella/Alderpine/Alderpine.html
@@ -203,7 +203,11 @@
     Governments
    </h3>
    <p class="first-paragraph">
-    Alderpine, as a province, consists of diverse regions with distinct governance structures that reflect the cultural and political systems within its boundaries. While the primary inhabitants of Alderpine emphasize self-governance and independence, the neighboring provinces of Zhu Lang Dynasty and
+    Alderpine, as a province, consists of diverse regions with distinct governance structures that reflect the cultural and political systems within its boundaries. While the primary inhabitants of Alderpine emphasize self-governance and independence, the neighboring provinces of
+    <a href="../Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html">
+     Zhu Lang Dynasty
+    </a>
+    and
     <a href="../The_Ashenlands/The_Ashenlands.html">
      The Ashenlands
     </a>
@@ -216,10 +220,19 @@
     Within Alderpine, many communities, particularly the elven enclaves and other mystical beings, adhere to tribal governance systems. These tribes operate based on principles of communal decision-making, consensus, and a deep respect for nature and ancestral traditions. Tribal leaders, chosen through wisdom, experience, or lineage, guide their communities and facilitate harmonious living within the forest.
    </p>
    <h4>
-    Influence of Zhu Lang Dynasty
+    Influence of
+    <a href="../Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html">
+     Zhu Lang Dynasty
+    </a>
    </h4>
    <p class="subsection">
-    To the north of Alderpine lies the Zhu Lang Dynasty, a political entity characterized by centralized and authoritarian rule. While the direct impact of the dynasty's governance may not extend deeply into Alderpine, its presence in the neighboring region can influence the province through trade, political alliances, or occasional border disputes. The proximity to the Zhu Lang Dynasty may shape the political landscape and interactions in the northern regions of Alderpine.
+    To the north of Alderpine lies the
+    <a href="../Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html">
+     Zhu Lang Dynasty</a>, a political entity characterized by centralized and authoritarian rule. While the direct impact of the dynasty's governance may not extend deeply into Alderpine, its presence in the neighboring region can influence the province through trade, political alliances, or occasional border disputes. The proximity to the
+    <a href="../Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html">
+     Zhu Lang Dynasty
+    </a>
+    may shape the political landscape and interactions in the northern regions of Alderpine.
    </p>
    <h4>
     Influence of
@@ -245,7 +258,11 @@
     Overall, the province of Alderpine upholds the values of self-governance and independence. While tribal communities and neighboring provinces have their respective governing systems, numerous smaller settlements and homesteads within Alderpine practice self-governance based on local customs and shared values. These communities prioritize communal harmony, cooperation, and a deep connection with the natural world while maintaining their independence within the province.
    </p>
    <p class="first-paragraph">
-    It is important to recognize that while the governments within Alderpine focus on self-governance, the presence and influence of the neighboring Zhu Lang Dynasty and
+    It is important to recognize that while the governments within Alderpine focus on self-governance, the presence and influence of the neighboring
+    <a href="../Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html">
+     Zhu Lang Dynasty
+    </a>
+    and
     <a href="../The_Ashenlands/The_Ashenlands.html">
      The Ashenlands
     </a>
