--- a/campaign/locations/regions/Matella/Matella.html
+++ b/campaign/locations/regions/Matella/Matella.html
@@ -327,13 +327,17 @@
       Tinco Merz
      </li>
      <li>
-      Visterguarde
+      <a href="Visterguarde/Visterguarde.html">
+       Visterguarde
+      </a>
      </li>
      <li>
       Zenitha
      </li>
      <li>
-      Zhu Lang Dynasty
+      <a href="Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html">
+       Zhu Lang Dynasty
+      </a>
      </li>
     </ul>
    </p>
