--- a/campaign/locations/regions/Matella/Visterguarde/index.html
+++ b/campaign/locations/regions/Matella/Visterguarde/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Visterguarde.html">
+      Visterguarde
+     </a>
+    </li>
+    <li>
      <a href="img/Visterguarde.jpg">
       img/Visterguarde.jpg
      </a>
