--- a/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/index.html
+++ b/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Zhu_Lang_Dynasty.html">
+      Zhu_Lang_Dynasty
+     </a>
+    </li>
+    <li>
      <a href="img/Zhu_Lang_Dynasty.jpg">
       img/Zhu_Lang_Dynasty.jpg
      </a>
