Added/generated some html character files.

--- a/campaign/characters/non-player/img/index.html
+++ b/campaign/characters/non-player/img/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,18 +46,63 @@
    </a>
   </div>
   <h1>
-   Index of monsters
+   Index of img
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="img/stoneshaper_golem.jpg">
-      img/stoneshaper_golem.jpg
+     <a href="arlo_ironheart.jpg">
+      arlo_ironheart.jpg
      </a>
     </li>
     <li>
-     <a href="stoneshaper_golem.html">
-      stoneshaper_golem
+     <a href="astrid_windrider.jpg">
+      astrid_windrider.jpg
+     </a>
+    </li>
+    <li>
+     <a href="cedric_blackthorn.jpg">
+      cedric_blackthorn.jpg
+     </a>
+    </li>
+    <li>
+     <a href="corvus_stormrider.jpg">
+      corvus_stormrider.jpg
+     </a>
+    </li>
+    <li>
+     <a href="elysia_moonwhisper.jpg">
+      elysia_moonwhisper.jpg
+     </a>
+    </li>
+    <li>
+     <a href="kaelar_stormcaller.jpg">
+      kaelar_stormcaller.jpg
+     </a>
+    </li>
+    <li>
+     <a href="lirael_forestwind.jpg">
+      lirael_forestwind.jpg
+     </a>
+    </li>
+    <li>
+     <a href="lyra_silverwind.jpg">
+      lyra_silverwind.jpg
+     </a>
+    </li>
+    <li>
+     <a href="thorin_stonehammer.jpg">
+      thorin_stonehammer.jpg
+     </a>
+    </li>
+    <li>
+     <a href="thorne_ironfist.jpg">
+      thorne_ironfist.jpg
+     </a>
+    </li>
+    <li>
+     <a href="valen_shadowborn.jpg">
+      valen_shadowborn.jpg
      </a>
     </li>
    </ul>
