--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -50,6 +50,131 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="aria_thistlewood.html">
+      aria_thistlewood
+     </a>
+    </li>
+    <li>
+     <a href="arlo_ironheart.html">
+      arlo_ironheart
+     </a>
+    </li>
+    <li>
+     <a href="astrid_windrider.html">
+      astrid_windrider
+     </a>
+    </li>
+    <li>
+     <a href="cedric_blackthorn.html">
+      cedric_blackthorn
+     </a>
+    </li>
+    <li>
+     <a href="corvus_stormrider.html">
+      corvus_stormrider
+     </a>
+    </li>
+    <li>
+     <a href="elara_nightshade.html">
+      elara_nightshade
+     </a>
+    </li>
+    <li>
+     <a href="elysia_moonwhisper.html">
+      elysia_moonwhisper
+     </a>
+    </li>
+    <li>
+     <a href="img/arlo_ironheart.jpg">
+      img/arlo_ironheart.jpg
+     </a>
+    </li>
+    <li>
+     <a href="img/astrid_windrider.jpg">
+      img/astrid_windrider.jpg
+     </a>
+    </li>
+    <li>
+     <a href="img/cedric_blackthorn.jpg">
+      img/cedric_blackthorn.jpg
+     </a>
+    </li>
+    <li>
+     <a href="img/corvus_stormrider.jpg">
+      img/corvus_stormrider.jpg
+     </a>
+    </li>
+    <li>
+     <a href="img/elysia_moonwhisper.jpg">
+      img/elysia_moonwhisper.jpg
+     </a>
+    </li>
+    <li>
+     <a href="img/kaelar_stormcaller.jpg">
+      img/kaelar_stormcaller.jpg
+     </a>
+    </li>
+    <li>
+     <a href="img/lirael_forestwind.jpg">
+      img/lirael_forestwind.jpg
+     </a>
+    </li>
+    <li>
+     <a href="img/lyra_silverwind.jpg">
+      img/lyra_silverwind.jpg
+     </a>
+    </li>
+    <li>
+     <a href="img/thorin_stonehammer.jpg">
+      img/thorin_stonehammer.jpg
+     </a>
+    </li>
+    <li>
+     <a href="img/thorne_ironfist.jpg">
+      img/thorne_ironfist.jpg
+     </a>
+    </li>
+    <li>
+     <a href="img/valen_shadowborn.jpg">
+      img/valen_shadowborn.jpg
+     </a>
+    </li>
+    <li>
+     <a href="kaelar_stormcaller.html">
+      kaelar_stormcaller
+     </a>
+    </li>
+    <li>
+     <a href="lirael_forestwind.html">
+      lirael_forestwind
+     </a>
+    </li>
+    <li>
+     <a href="lyra_silverwind.html">
+      lyra_silverwind
+     </a>
+    </li>
+    <li>
+     <a href="seraphina_thornvale.html">
+      seraphina_thornvale
+     </a>
+    </li>
+    <li>
+     <a href="thorin_stonehammer.html">
+      thorin_stonehammer
+     </a>
+    </li>
+    <li>
+     <a href="thorne_ironfist.html">
+      thorne_ironfist
+     </a>
+    </li>
+    <li>
+     <a href="valen_shadowborn.html">
+      valen_shadowborn
+     </a>
+    </li>
    </ul>
   </div>
  </body>
