--- a/campaign/creatures/monsters/img/index.html
+++ b/campaign/creatures/monsters/img/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,18 +46,13 @@
    </a>
   </div>
   <h1>
-   Index of monsters
+   Index of img
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="img/stoneshaper_golem.jpg">
-      img/stoneshaper_golem.jpg
-     </a>
-    </li>
-    <li>
-     <a href="stoneshaper_golem.html">
-      stoneshaper_golem
+     <a href="stoneshaper_golem.jpg">
+      stoneshaper_golem.jpg
      </a>
     </li>
    </ul>
