Fixed some image css, improved image file handling for page creation, added goodest berry spell html page

--- a/campaign/characters/non-player/img/index.html
+++ b/campaign/characters/non-player/img/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="aria_thistlewood.jpg">
+      aria_thistlewood.jpg
+     </a>
+    </li>
+    <li>
      <a href="arlo_ironheart.jpg">
       arlo_ironheart.jpg
      </a>
