--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -86,6 +86,11 @@
      </a>
     </li>
     <li>
+     <a href="img/aria_thistlewood.jpg">
+      img/aria_thistlewood.jpg
+     </a>
+    </li>
+    <li>
      <a href="img/arlo_ironheart.jpg">
       img/arlo_ironheart.jpg
      </a>
