--- a/campaign/spells/level_1/img/index.html
+++ b/campaign/spells/level_1/img/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,18 +46,13 @@
    </a>
   </div>
   <h1>
-   Index of level_1
+   Index of img
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="Goodest_Berry.html">
-      Goodest_Berry
-     </a>
-    </li>
-    <li>
-     <a href="img/digested_goodest_berries.jpg">
-      img/digested_goodest_berries.jpg
+     <a href="digested_goodest_berries.jpg">
+      digested_goodest_berries.jpg
      </a>
     </li>
    </ul>
